<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/macAddressText"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/settings_mac_address"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/macAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/turningTimeText"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/settings_turning_time"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/turningTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:labelFor="@id/turningTimeText"
            android:maxLength="4"
            android:text="@string/settings_turning_time_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/loopsText"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/settings_loops"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/loops"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:labelFor="@id/loopsText"
            android:maxLength="4"
            android:text="@string/settings_loops_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/thresholdText"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/settings_comparison_threshold"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/threshold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:labelFor="@id/thresholdText"
            android:maxLength="4"
            android:text="@string/settings_comparison_threshold_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/arrivalThresholdText"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/settings_arrival_threshold"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/arrivalThreshold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:labelFor="@id/arrivalThresholdText"
            android:maxLength="4"
            android:text="@string/settings_arrival_threshold_default" />
    </LinearLayout>

    <Button
        android:id="@+id/nextbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/button_next" />

</LinearLayout>