<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        style="@android:style/TextAppearance.Material.Display3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/main_title"
        android:textAlignment="center" />

    <TextView
        style="@android:style/TextAppearance.Material.Display1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/main_subtitle"
        android:textAlignment="center" />

    <ProgressBar
        android:id="@+id/spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="visible" />

    <TextView
        style="@android:style/TextAppearance.Material.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/main_finding_location"
        android:textAlignment="center"
        android:id="@+id/statusTextView" />

    <TextView
        style="@android:style/TextAppearance.Material.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:id="@+id/restaurantTextView" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:onClick="goToBTList"
        android:text="@string/button_next" />

</LinearLayout>