<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.ManualControlActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView4"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/manual_control_alarm_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/notifyFab" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        android:text="@string/manual_control_cancel_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelFab"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="208dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonUp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorDarkButton"
            android:drawableStart="@drawable/ic_arrow_up" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonLeft"
                style="@android:style/ThemeOverlay.Material.Dark"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorDarkButton"
                android:drawableStart="@drawable/ic_arrow_left" />

            <Button
                android:id="@+id/buttonStop"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorDarkButton"
                android:drawableStart="@drawable/ic_stop"
                android:visibility="invisible" />

            <Button
                android:id="@+id/buttonRight"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorDarkButton"
                android:drawableStart="@drawable/ic_arrow_right" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonDown"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorDarkButton"
            android:drawableStart="@drawable/ic_arrow_down" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        style="@android:style/TextAppearance.Material.Display1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/manual_control_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/manual_control_instructions"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cancelFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="511dp"
        android:layout_weight="1"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/notifyFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="511dp"
        android:layout_weight="1"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_notify" />

</android.support.constraint.ConstraintLayout>